minor clean up and edits to overview

--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -70,7 +70,6 @@ library(dplyr);library(ggplot2);library(dbplyr);library(readr);library(stringr);
   + 2019 Summer (minimal time) - prep for August discussion w/ KLGO Resources staff (Jason Taylor, Anne Matsov, Mary Hake); discussed major concern over lack of explicit, specific motivating Objectives (see **Introduction** and **Assessment Results: Phase 1 - Problem Framing and Information Objectives**).
   + 2019 Fall (no progress) - all efforts on hold during Regional Biometrician's detail as NRST Lead
   + 2020 Winter (high level summary of initial concerns added) - in light of the forthcoming transition of the Regional Biometrician to another NPS program, there was a follow up discussion (late Feb) with KLGO Resource Staff (Anne Matsov, Mary Hake) touching on a variety of initial concerns (see **Summary of (Potential) Concerns** below) identified but not yet detailed or assessed quantitatively and thus not yet detailed in the incomplete draft report; conversation ultimately focused on implications of those concerns regarding decisions of (a) potentially reducing or (b) potentially skipping the FY20 field season. Regional Biometrician pointed out that reducing the data collection effort requires further thought and familiarity with existing program's limitations and KLGO's 'hierarchy of objectives' for undertaking this monitoring effort and that, from a statistical perspective, skipping one year in an 15+ year monitoring effort was not problematic in terms of summary analyses of trends and changes.
-  + 2020 Feb/Mar (as time permitted) -   
 
 # Summary of (Potential) Concerns
 The report was planned to focus on each of 4 major assessment areas (see **Introduction** below). The current draft is near complete only with regard to the first, focused on problem Framing. The other points immediately below are other priority concerns raised in developing this project and of importance for the Park and the next Regional Biometrician to be aware of but that have not yet been captured in the draft text or figures.  They should be considered by the Park in deciding on Next Steps. 
@@ -79,7 +78,7 @@ The report was planned to focus on each of 4 major assessment areas (see **Intro
 Of the 4 major topics or phases that should be addressed in a full assessment of a monitoring program, the most important is the first topic - the *Why* motivating the program; e.g., the program's Problem Framing and Information Objectives. I've provided draft feedback on this and a number of key questions that require resolution by KLGO staff prior to diving into any detailed analyses so as to ensure futher detailed review of data collection & analyses target KLGO's desired Information Objectives. 
 
 ## Imporant aspects of the Survey Design 
-**Timing**: the start and end dates of the survey vary across years by over a month (see draft Figure 2 below). The timing should be clarified and consistently implemented, as much as possible, to reduce this source of uncertainty and problems in analyzing changes in phenology and other outcomes of interest.  The clarification should be targeted as the priority information goals the Park has identified in the Problem Framing.
+**Timing**: the start and end dates of the survey vary across years by over a month (see draft Figure 2 below). The timing should be clarified and consistently implemented, as much as possible, to reduce this source of uncertainty and problems in analyzing changes in phenology and other outcomes of interest.  The clarification should target the priority information goals the Park has identified in the Problem Framing.
 
 **Timing re: Target Species Phenology**: if migration phenology is a priority outcome of interest, the simple analyses related to the draft Figures 3 and 5 should be pursued to ID those target species whose northward and/or southward passages are regularly 'captured'. Note that if species is already observed on the first (last) survey of the season, then the survey is **not** capturing the timing of their northward (southward) migration. To capture that event requires at least one survey suggesting the species is not yet arrived in the area *prior* to the first observation (same thing for southward: at least one survey w/o observation *after* the last observation of the species). This hasn't been thoroughly investigated, but glancing at draft Figure 3 (or 5) suggests that the current survey design, as implemented, is capturing the northward (southward) migration of very few species; e.g., most of the species are seen on the first (last) survey of the season. If Phenology is an important outcome of interest, these simple assessments should be pursued to clarify which, if any, regularly seen species this survey may be providing consistent information on.
 
